revert to default style

--- a/style1.css
+++ b/style1.css
@@ -5,7 +5,7 @@
 }
 
 body.index {
-    background: linear-gradient(to bottom, #0655ca, #FFFFFF 55% 100%);
+    background: linear-gradient(to bottom, #E62C35, #FFFFFF 55% 100%);
 }
 
 body.portfolio {
